[package]
name = "cdu"
version = "0.1.3"
edition = "2021"
description = "Updates the A record of a domain at Cloudflare with the current outside IP address."

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "env"] }
dotenvy = "0.15"
reqwest = { version = "^0", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
